# amazon-kinesis-video-streams-sdp

./: .gitignore  .gitmodules  CMakeLists.txt  MISRA.md  README.md  sdpFilePaths.cmake
.github/workflows/: ci.yml
source/: sdp_deserializer.c  sdp_serializer.c
source/include/: sdp_config_defaults.h  sdp_data_types.h  sdp_deserializer.h  sdp_serializer.h
test/coverity/: CMakeLists.txt  README.md  READNE.md  misra.config  sdp_config.h
test/unit-test/: CMakeLists.txt  README.md  catch_assert.h  sdp_config.h
test/unit-test/cmock/: coverage.cmake  create_test.cmake
test/unit-test/sdp_deserializer/: sdp_deserializer_utest.c  ut.cmake
test/unit-test/sdp_serializer/: sdp_serializer_utest.c  ut.cmake
